--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.CarRentalMVVM"
         tools:targetApi="31">
         <activity
-            android:name=".screen.SplashSecondActivity"
+            android:name=".screen.GetStartedActivity"
             android:exported="false" />
         <activity
             android:name=".screen.SignInActivity"
