--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,19 +13,19 @@
         android:theme="@style/Theme.CarRentalMVVM"
         tools:targetApi="31">
         <activity
-            android:name=".screen.GetStartedActivity"
+            android:name=".ui.GetStartedActivity"
             android:exported="false" />
         <activity
-            android:name=".screen.SignInActivity"
+            android:name=".ui.SignInActivity"
             android:exported="false" />
         <activity
-            android:name=".screen.SignUpActivity"
+            android:name=".ui.SignUpActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.SplashActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false" />
-        <activity
-            android:name=".screen.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
