--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.CarRentalMVVM"
         tools:targetApi="31">
         <activity
+            android:name=".ui.signin.SignInActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.getstarted.GetStartedActivity"
             android:exported="false" />
         <activity
@@ -34,5 +37,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
