--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
         android:theme="@style/Theme.CarRentalMVVM"
         tools:targetApi="31">
         <activity
+            android:name=".ui.track_map.TrackMapActivity"
+            android:screenOrientation="portrait"
+            android:exported="false" />
+        <activity
             android:name=".ui.payment_made.PaymentMadeActivity"
             android:screenOrientation="portrait"
             android:exported="false" />
